@startuml
!pragma layout smetana
class User {
    - loggedInUsername: String

    + login(username: String, password: String, path: String): boolean
    + getLoggedInUsername(): String
}

class Media {
    - title: String
    - releaseYear: int
    - categories: ArrayList<Category>
    - rating: double

    + watchLater(user: User, media: Media)
    + removeFromWatchLater(user: User)
    + alreadyWatched(user: User)
    + watch(title: String)
}

class Movies extends Media {
    + watchLater(user: User, media: Media)
    + removeFromWatchLater(user: User)
    + alreadyWatched(user: User)
    + watch(title: String)
}

class Shows extends Media {
    - seasons: List<Seasons>

    + watchLater(user: User, media: Media)
    + removeFromWatchLater(user: User)
    + alreadyWatched(user: User)
    + watch(title: String)
}

class Seasons {
    - seasonNumber: int
    - episodeCount: int
}

class Category {
    + findCategory(s: String): Category
}

class Streaming {
    - username: String
    - password: String

    + createAccount(username: String, password: String, path: String)
}

class FileIO {
    + readFile(path: String): List<Media>
    + parseLine(line: String, path: String): Media
    + saveMediaData(title: String, releaseYear: int, category: ArrayList<Category>, rating: double)
    + saveUserData(username: String, password: String, path: String)
    + addWatchLater(user: User, media: Media)
}

class Util {
    + displayList(list: ArrayList<String>, msg: String)
    + promptText(msg: String): String
    + promptNumeric(msg: String): int
    + displayMsg(msg: String)
    + promptChoice(optionslist: ArrayList<String>, msg: String): int
}

class Menu {
    - listOfActions: ArrayList<String>
    - listOfActions2: ArrayList<String>
    - optionslist: ArrayList<String>
    - util: Util
    - user: User
    - streaming: Streaming
    - media: Media
    - sh: SearchHandler

    + startMenu()
    + exit()
    + usernameInfoScreen(msg: String): String
    + passwordInfoScreen(msg: String): String
    + settings()
    + mainMenu(): ArrayList<Media>
}

class SearchHandler {
    + searchInput(input: String): ArrayList<Media>
    + genreSearch(c: Category): ArrayList<Media>
}


User "1" --|> Media
User "1" --|> Movies
User "1" --|> Shows
Media "1" --|> Seasons
Streaming "1" --|> User
FileIO "1" --|> Media
Menu "1" --|> User
Menu "1" --|> Media
Menu "1" --|> SearchHandler
Util "1" --|> Menu

@enduml
